--- a/composer.json
+++ b/composer.json
@@ -7,10 +7,12 @@
     "require": {
         "php": "^8.1",
         "ext-curl": "*",
+        "ext-gd": "*",
         "ext-libxml": "*",
         "ext-simplexml": "*",
         "doctrine/annotations": "^2.0",
         "electrolinux/phpquery": "^0.9.7",
+        "google/apiclient": "^2.16",
         "guzzlehttp/guzzle": "^7.2",
         "kerigard/laravel-lang-ru": "^1.3",
         "laravel/framework": "^10.0",
@@ -19,8 +21,7 @@
         "laravel/tinker": "^2.8",
         "laravel/ui": "^4.5",
         "pusher/pusher-php-server": "^7.2",
-        "zircote/swagger-php": "^4.9",
-        "ext-gd": "*"
+        "zircote/swagger-php": "^4.9"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
