--- a/composer.json
+++ b/composer.json
@@ -18,8 +18,10 @@
         "laravel/framework": "^10.0",
         "laravel/passport": "^11.8",
         "laravel/sanctum": "^3.2",
+        "laravel/scout": "^10.9",
         "laravel/tinker": "^2.8",
         "laravel/ui": "^4.5",
+        "namoshek/laravel-scout-database": "^2.4",
         "pusher/pusher-php-server": "^7.2",
         "zircote/swagger-php": "^4.9"
     },
