--- a/composer.json
+++ b/composer.json
@@ -10,10 +10,13 @@
         "ext-gd": "*",
         "ext-libxml": "*",
         "ext-simplexml": "*",
+        "algolia/algoliasearch-client-php": "^3.4",
+        "algolia/scout-extended": "^3.1",
         "doctrine/annotations": "^2.0",
         "electrolinux/phpquery": "^0.9.7",
         "google/apiclient": "^2.16",
         "guzzlehttp/guzzle": "^7.2",
+        "http-interop/http-factory-guzzle": "^1.2",
         "kerigard/laravel-lang-ru": "^1.3",
         "laravel/framework": "^10.0",
         "laravel/passport": "^11.8",
@@ -21,6 +24,7 @@
         "laravel/scout": "^10.9",
         "laravel/tinker": "^2.8",
         "laravel/ui": "^4.5",
+        "meilisearch/meilisearch-php": "^1.8",
         "namoshek/laravel-scout-database": "^2.4",
         "pusher/pusher-php-server": "^7.2",
         "zircote/swagger-php": "^4.9"
@@ -74,7 +78,8 @@
         "preferred-install": "dist",
         "sort-packages": true,
         "allow-plugins": {
-            "pestphp/pest-plugin": true
+            "pestphp/pest-plugin": true,
+            "php-http/discovery": true
         }
     },
     "minimum-stability": "stable",
